Test gradle Java 9 workaround with TravisCI.